sbi-manifests/sbi-cms-platform-dev-gc-base24-classic-f1/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-platform-dev-gc-base24-classic-f1
  namespace: sbi
  labels:
    app: sbi-cms-platform-dev-gc-base24-classic-f1
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-platform-dev-gc-base24-classic-f1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-platform-dev-gc-base24-classic-f1
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": bdac4eacee5e437504e8f2bbe0a203688f7967beae6bb4e5be57b1786a43276d
    spec:
      serviceAccountName: sbi-cms-platform-dev-gc-base24-classic-f1-sa
      volumes:
        - name: key-cert-vol
          configMap:
            name: public-private-key
        - name: visa-npci-key-configmap-volume
          configMap:
            name: visa-npci-key-configmap
        - name: dcms-keys-volume
          configMap:
            name: dcms-keys-configmap
        - name: sbi-keys-volume
          configMap:
            name: sbi-keys-configmap
      containers:
        - name: sbi-cms-platform-dev-gc-base24-classic-f1
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-platform-go-connect:sbi-uat.v81
          volumeMounts:
            - name: key-cert-vol
              mountPath: /config
            - name: visa-npci-key-configmap-volume
              mountPath: /data
            - name: dcms-keys-volume
              mountPath: /vol
            - name: sbi-keys-volume
              mountPath: /sbi
          ports:
            - containerPort: 8290
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
