sbi-manifests/sbi-cms-platform-dev-gc-base24-classic-f1/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-platform-dev-gc-base24-classic-f1
  namespace: sbi
  labels:
    app: sbi-cms-platform-dev-gc-base24-classic-f1
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8290-8290'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 8290
      targetPort: 8290
      name: 8290-8290
  selector:
    app: sbi-cms-platform-dev-gc-base24-classic-f1
  type: ClusterIP
